fixed contribute page footer and OpenSource wrong info

--- a/html/contribute.html
+++ b/html/contribute.html
@@ -179,14 +179,10 @@
           <h2 class="heading">Open Source</h2>
           <div class="opensource__body">
             <p>
-              This <a class="paragraph-links" href="#">project</a> is
-              OpenSource. All contributions are welcome to grow this project and
-              don't need to know how to code to contribute.</p
+              This project is OpenSource and is hosted on <a class="paragraph-links" href="#">GitHub</a>. All meaningful contributions are welcome to help grow this project and you don't need to know how to code to contribute.</p
             >
             <p
-              >You can contribute as a
-              <a class="paragraph-links" href="#">developer here</a> or a
-              <a class="paragraph-links" href="#">non-developer here</a>.</p
+              >If you would like to contribute to this project, please visit our <a class="paragraph-links" href="#">contributors page</a> to find out how to contribute.</p
             >
             <p style="display: none">
               A considerable amount of my time is spent doing unpaid community
@@ -220,11 +216,12 @@
 
           <!-- attribution -->
           <div class="sections attribution">
-            <p>
-              This project is OpenSource and is hosted on <a class="paragraph-links" href="#">GitHub</a>. All meaningful contributions are welcome to help grow this project and you don't need to know how to code to contribute.</p
-            >
             <p
-              >If you would like to contribute to this project, please visit our <a class="paragraph-links" href="#">contributors page</a> to find out how to contribute.</p
+              ><a class="paragraph-links" href="/">Tech Roadmap</a> is created
+              by
+              <a class="paragraph-links" href="https://github.com/timonwa"
+                >Timonwa</a
+              ></p
             >
           </div>
 
