replaced dummy text

--- a/html/careers.html
+++ b/html/careers.html
@@ -152,20 +152,13 @@
             <h1 class="heading">Begin Your Tech Career Journey!</h1>
             <div class="intro__body">
               <p
-                >Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Inventore nobis voluptate doloribus deserunt maxime quos,
-                quibusdam aperiam magni incidunt eos enim, laborum nam odio
-                placeat ut consequuntur aut dolorem sint!</p
+                >The technology industry is vast and can be quite frightening for one who is not familiar with it. Very often non-technical  people believe that the word *Tech* is a job title; maybe because we refer to people who work in the tech space as tech sis or tech bro. But every tech sis or tech bro have a more specific job title and their responsibilities differ even within the same company.</p
               >
               <p
-                >Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem
-                odio debitis aut natus dolorem esse. Aliquam, qui odit deserunt
-                officiis fugit fuga maiores beatae alias, rem porro magni
-                aliquid at?</p
+                >There are over 20 job titles in the Tech Industry and they can be divided into 2 categories: the one that requires you to write code and the one that doesn't. You can learn about them by going through the resources below.</p
               >
               <p
-                >Not sure which career to pick? You can use the resources below
-                as guides.</p
+                >Once you have done that, you should be able to have basic understanding on what the different careers are about, the responsibilities of each of them, and the requirements needed to go into it. You can then decide on which career path you would like to begin with.</p
               >
             </div>
           </div>
