--- a/html/careers.html
+++ b/html/careers.html
@@ -17,7 +17,7 @@
     />
     <meta
       name="description"
-      content="Begin your career in Tech. Roadmaps, articles and resources to help you choose a career path, start your journey and grow in tech."
+      content="Begin your career in Tech. Roadmaps, articles, and resources to help you choose a career path, start your journey and grow in tech."
     />
     <!-- Open Graph / Facebook Meta Tags -->
     <meta property="og:type" content="website" />
@@ -28,7 +28,7 @@
     />
     <meta
       property="og:description"
-      content="Begin your career in Tech. Roadmaps, articles and resources to help you choose a career path, start your journey and grow in tech."
+      content="Begin your career in Tech. Roadmaps, articles, and resources to help you choose a career path, start your journey and grow in tech."
     />
     <meta property="og:image" content="1200px to 627px less than 5mb" />
     <!-- Twitter Meta Tags -->
@@ -40,7 +40,7 @@
     />
     <meta
       property="twitter:description"
-      content="Begin your career in Tech. Roadmaps, articles and resources to help you choose a career path, start your journey and grow in tech."
+      content="Begin your career in Tech. Roadmaps, articles, and resources to help you choose a career path, start your journey and grow in tech."
     />
     <meta property="twitter:image" content="1200px to 627px less than 5mb" />
 
@@ -152,13 +152,13 @@
             <h1 class="heading">Begin Your Tech Career Journey!</h1>
             <div class="intro__body">
               <p
-                >The technology industry is vast and can be quite frightening for one who is not familiar with it. Very often non-technical  people believe that the word *Tech* is a job title; maybe because we refer to people who work in the tech space as tech sis or tech bro. But every tech sis or tech bro have a more specific job title and their responsibilities differ even within the same company.</p
+                >The technology industry is vast and can be quite frightening for one who is not familiar with it. Very often non-technical people believe that the word *Tech* is a job title; maybe because we refer to people who work in the tech space as tech sis or tech bro. But every tech sis or tech bro has a more specific job title and their responsibilities differ even within the same company.</p
               >
               <p
                 >There are over 20 job titles in the Tech Industry and they can be divided into 2 categories: the one that requires you to write code and the one that doesn't. You can learn about them by going through the resources below.</p
               >
               <p
-                >Once you have done that, you should be able to have basic understanding on what the different careers are about, the responsibilities of each of them, and the requirements needed to go into it. You can then decide on which career path you would like to begin with.</p
+                >Once you have done that, you should be able to have a basic understanding of what the different careers are about, the responsibilities of each of them, and the requirements needed to go into it. You can then decide on which career path you would like to begin with.</p
               >
             </div>
           </div>
@@ -196,7 +196,7 @@
               <div class="careers__card">
                 <h3>Android/Mobile</h3>
                 <p
-                  >Curated guide and resources to becoming a android/mobile
+                  >Curated guide and resources to becoming an android/mobile
                   developer.</p
                 >
               </div>
@@ -231,7 +231,7 @@
         </section>
       </main>
 
-      <!--* open source (about the project) -->
+      <!--* open-source (about the project) -->
       <aside class="opensource">
         <div class="opensource-wrapper">
           <h2 class="heading">Open Source</h2>
