added resource links to careers page

--- a/html/careers.html
+++ b/html/careers.html
@@ -164,6 +164,42 @@
           </div>
         </section>
 
+        <!--* choosing a career -->
+        <section class="resource-section">
+         <div class="resource-section__links">
+            <!-- articles -->
+            <div class="resource-card">
+              <h3 class="resource-card-title">Articles</h3>
+              <ul class="resource-card-links">
+                <li class="resource-link">
+                  <a target="_blank"
+                    href="https://blog.timonwa.com/you-dont-need-to-write-code-to-become-a-tech-sisbro"
+                    >You don't need to write code to become a tech sis or tech bro.</a
+                  >
+                </li>
+                <li class="resource-link">
+                  <a target="_blank"
+                    href="https://skillcrush.com/blog/41-tech-job-titles/"
+                    >41 Job Titles in Tech. Which One Will be Yours?</a
+                  >
+                </li>
+              </ul>
+            </div>
+
+            <!-- videos -->
+            <div class="resource-card">
+              <h3 class="resource-card-title">Videos</h3>
+              <ul class="resource-card-links"
+                ><li class="resource-link">
+                  <a target="_blank" href="#"
+                    ></a
+                  >
+                </li>
+              </ul>
+            </div>
+          </div>
+        </section>
+
         <!-- * careers section -->
         <section class="careers">
           <h2 class="heading">Careers in Tech</h2>
