Added heading to resource section in careers page

--- a/html/careers.html
+++ b/html/careers.html
@@ -166,6 +166,9 @@
 
         <!--* choosing a career -->
         <section class="resource-section">
+         <h2 class="resource-section__heading"
+            >Learn About the Tech Careers</h2
+          >
          <div class="resource-section__links">
             <!-- articles -->
             <div class="resource-card">
