--- a/html/contribute.html
+++ b/html/contribute.html
@@ -152,21 +152,46 @@
             <h1 class="heading">How to contribute to this Project!</h1>
             <div class="intro__body">
               <p
-                >The technology industry is vast and can be quite frightening for one who is not familiar with it. Very often non-technical  people believe that the word *Tech* is a job title; maybe because we refer to people who work in the tech space as tech sis or tech bro. But every tech sis or tech bro have a more specific job title and their responsibilities differ even within the same company.</p
+                >I'm so excited to have you contribute to this project. You are the real MVP. 🎉
+                </p>
+              <p
+                >There are so many ways in which you can help us grow Tech Roadmap into a budding tech community and the no. 1 online resource for tech careers and learning. You can do so by</p
+              >
+
+              <ul>
+<li>adding a new roadmap,</li>
+<li>editing, or suggesting changes to the existing roadmaps,</li>
+<li>contributing to the content and resources of the website,</li>
+<li>fixing grammar mistakes or typos on the contents of the website,</li>
+<li>contributing to the UI design of the site,</li>
+<li>refactoring our codebase, etc.</li>
+</ul>
+
+              <p
+                >If you want to contribute as a developer, you can do so <a class="paragraph-links" href="#"
+                >here</a
+              >. If you are a non-developer or do not know how to code but still want to contribute, you can do that <a class="paragraph-links" href="#"
+                >here</a
+              >.</p
               >
               <p
-                >There are over 20 job titles in the Tech Industry and they can be divided into 2 categories: the one that requires you to write code and the one that doesn't. You can learn about them by going through the resources below.</p
+                >Do read our <a class="paragraph-links" href="#"
+                >contribution guidelines</a
+              > first before making any contributions and please star our <a class="paragraph-links" href="#"
+                >Github repo</a
+              >, it would mean much to us.</p
               >
               <p
-                >Once you have done that, you should be able to have basic understanding on what the different careers are about, the responsibilities of each of them, and the requirements needed to go into it. You can then decide on which career path you would like to begin with.</p
+                >See you soon! 👋</p
               >
             </div>
           </div>
         </section>
 
-        <!-- * careers section -->
-        <section class="careers">
-          <h2 class="heading">Contribute</h2>
+<!-- * contributors section -->
+        <section class="contributors">
+          <h2 class="heading">Meet our MVPs</h2>
+           <p>Coming soon. 😊</p>
         </section>
       </main>
 
