added clickable links on all pages.

--- a/html/careers.html
+++ b/html/careers.html
@@ -152,13 +152,26 @@
             <h1 class="heading">Begin Your Tech Career Journey!</h1>
             <div class="intro__body">
               <p
-                >The technology industry is vast and can be quite frightening for one who is not familiar with it. Very often non-technical people believe that the word *Tech* is a job title; maybe because we refer to people who work in the tech space as tech sis or tech bro. But every tech sis or tech bro has a more specific job title and their responsibilities differ even within the same company.</p
+                >The technology industry is vast and can be quite frightening
+                for one who is not familiar with it. Very often non-technical
+                people believe that the word *Tech* is a job title; maybe
+                because we refer to people who work in the tech space as tech
+                sis or tech bro. But every tech sis or tech bro has a more
+                specific job title and their responsibilities differ even within
+                the same company.</p
               >
               <p
-                >There are over 20 job titles in the Tech Industry and they can be divided into 2 categories: the one that requires you to write code and the one that doesn't. You can learn about them by going through the resources below.</p
+                >There are over 20 job titles in the Tech Industry and they can
+                be divided into 2 categories; the one that requires you to write
+                code and the one that doesn't. You can learn about them by going
+                through the resources below.</p
               >
               <p
-                >Once you have done that, you should be able to have a basic understanding of what the different careers are about, the responsibilities of each of them, and the requirements needed to go into it. You can then decide on which career path you would like to begin with.</p
+                >Once you have done that, you should be able to have a basic
+                understanding of what the different careers are about, the
+                responsibilities of each of them, and the requirements needed to
+                go into it. You can then decide on which career path you would
+                like to begin with.</p
               >
             </div>
           </div>
@@ -166,22 +179,25 @@
 
         <!--* choosing a career -->
         <section class="resource-section">
-         <h2 class="resource-section__heading"
+          <h2 class="resource-section__heading"
             >Learn About the Tech Careers</h2
           >
-         <div class="resource-section__links">
+          <div class="resource-section__links">
             <!-- articles -->
             <div class="resource-card">
               <h3 class="resource-card-title">Articles</h3>
               <ul class="resource-card-links">
                 <li class="resource-link">
-                  <a target="_blank"
+                  <a
+                    target="_blank"
                     href="https://blog.timonwa.com/you-dont-need-to-write-code-to-become-a-tech-sisbro"
-                    >You don't need to write code to become a tech sis or tech bro.</a
+                    >You don't need to write code to become a tech sis or tech
+                    bro.</a
                   >
                 </li>
                 <li class="resource-link">
-                  <a target="_blank"
+                  <a
+                    target="_blank"
                     href="https://skillcrush.com/blog/41-tech-job-titles/"
                     >41 Job Titles in Tech. Which One Will be Yours?</a
                   >
@@ -194,9 +210,7 @@
               <h3 class="resource-card-title">Videos</h3>
               <ul class="resource-card-links"
                 ><li class="resource-link">
-                  <a target="_blank" href="#"
-                    ></a
-                  >
+                  <a target="_blank" href="#"></a>
                 </li>
               </ul>
             </div>
@@ -260,7 +274,7 @@
             <a href="#" class="careers__card-link disabled">
               <p class="coming-soon"><span>Coming Soon</span></p>
               <div class="careers__card">
-                <h3>Product Management</h3>
+                <h3>Technical Writing</h3>
                 <p
                   >Curated guide and resources to becoming a product manager.</p
                 >
@@ -270,17 +284,29 @@
         </section>
       </main>
 
-      <!--* open-source (about the project) -->
+      <!--* open source (about the project) -->
       <aside class="opensource">
         <div class="opensource-wrapper">
           <h2 class="heading">Open Source</h2>
           <div class="opensource__body">
-           <p>
-              This project is OpenSource and is hosted on <a class="paragraph-links" href="#">GitHub</a>. All meaningful contributions are welcome to help grow this project and you don't need to know how to code to contribute.</p
+            <p>
+              This project is OpenSource and is hosted on
+              <a
+                class="paragraph-links"
+                href="https://github.com/Timonwa/techroadmap"
+                >GitHub</a
+              >. All meaningful contributions are welcome to help grow this
+              project and you don't need to know how to code to contribute.</p
             >
             <p
-              >If you would like to contribute to this project, please visit our <a class="paragraph-links" href="#">contributors page</a> to find out how to contribute.</p
-            > 
+              >If you would like to contribute to this project, please visit our
+              <a
+                class="paragraph-links"
+                href="https://github.com/Timonwa/techroadmap/blob/main/CONTRIBUTING.md"
+                >contributors page</a
+              >
+              to find out how to contribute.</p
+            >
             <p style="display: none">
               A considerable amount of my time is spent doing unpaid community
               work on things that I hope will help humanity in some way. Your
@@ -325,7 +351,8 @@
           <!-- website quote -->
           <div class="sections quote">
             <p
-              >Roadmaps, articles, and useful resources to help you choose a career path, start your journey, and grow in tech. 
+              >Roadmaps, articles, and useful resources to help you choose a
+              career path, start your journey, and grow in tech.
             </p>
           </div>
 
