--- a/html/careers/frontend.html
+++ b/html/careers/frontend.html
@@ -3429,10 +3429,10 @@
           <h2 class="heading">Open Source</h2>
           <div class="opensource__body">
             <p>
-              This project is OpenSource and is hosted on <a class="paragraph-links" href="#">GitHub</a>. All meaningful contributions are welcome to help grow this project and you don't need to know how to code to contribute.</p
+              This project is OpenSource and is hosted on <a class="paragraph-links" href="https://github.com/Timonwa/techroadmap">GitHub</a>. All meaningful contributions are welcome to help grow this project and you don't need to know how to code to contribute.</p
             >
             <p
-              >If you would like to contribute to this project, please visit our <a class="paragraph-links" href="#">contributors page</a> to find out how to contribute.</p
+              >If you would like to contribute to this project, please visit our <a class="paragraph-links" href="https://github.com/Timonwa/techroadmap/blob/main/CONTRIBUTING.md">contributors page</a> to find out how to contribute.</p
             >
             <p style="display: none">
               A considerable amount of my time is spent doing unpaid community
