--- a/html/contribute.html
+++ b/html/contribute.html
@@ -152,46 +152,65 @@
             <h1 class="heading">How to contribute to this Project!</h1>
             <div class="intro__body">
               <p
-                >I'm so excited to have you contribute to this project. You are the real MVP. 🎉
-                </p>
+                >I'm so excited to have you contribute to this project. You are
+                the real MVP. 🎉
+              </p>
               <p
-                >There are so many ways in which you can help us grow Tech Roadmap into a budding tech community and the no. 1 online resource for tech careers and learning. You can do so by</p
+                >There are so many ways in which you can help us grow Tech
+                Roadmap into a budding tech community and the no. 1 online
+                resource for tech careers and learning. You can do so by</p
               >
 
-              <ul>
-<li>adding a new roadmap,</li>
-<li>editing, or suggesting changes to the existing roadmaps,</li>
-<li>contributing to the content and resources of the website,</li>
-<li>fixing grammar mistakes or typos on the contents of the website,</li>
-<li>contributing to the UI design of the site,</li>
-<li>refactoring our codebase, etc.</li>
-</ul>
+              <ul class="contributing-list">
+                <li>adding a new roadmap,</li>
+                <li
+                  >editing, or suggesting changes to the existing roadmaps,</li
+                >
+                <li
+                  >contributing to the content and resources of the website,</li
+                >
+                <li
+                  >fixing grammar mistakes or typos on the contents of the
+                  website,</li
+                >
+                <li>contributing to the UI design of the site,</li>
+                <li>refactoring our codebase, etc.</li>
+              </ul>
 
               <p
-                >If you want to contribute as a developer, you can do so <a class="paragraph-links" href="#"
-                >here</a
-              >. If you are a non-developer or do not know how to code but still want to contribute, you can do that <a class="paragraph-links" href="#"
-                >here</a
-              >.</p
+                >If you want to contribute as a developer, you can do so
+                <a
+                  class="paragraph-links"
+                  href="https://github.com/Timonwa/techroadmap"
+                  >here</a
+                >. If you are a non-developer or do not know how to code but
+                still want to contribute, you can do that
+                <a class="paragraph-links" href="#">here</a>.</p
               >
               <p
-                >Do read our <a class="paragraph-links" href="#"
-                >contribution guidelines</a
-              > first before making any contributions and please star our <a class="paragraph-links" href="#"
-                >Github repo</a
-              >, it would mean much to us.</p
+                >Do read our
+                <a
+                  class="paragraph-links"
+                  href="https://github.com/Timonwa/techroadmap/blob/main/CONTRIBUTING.md"
+                  >contribution guidelines</a
+                >
+                first before making any contributions and please give our
+                <a
+                  class="paragraph-links"
+                  href="https://github.com/Timonwa/techroadmap"
+                  >Github repo</a
+                >
+                a star, it would mean much to us.</p
               >
-              <p
-                >See you soon! 👋</p
-              >
+              <p>See you soon! 👋</p>
             </div>
           </div>
         </section>
 
-<!-- * contributors section -->
+        <!-- * contributors section -->
         <section class="contributors">
           <h2 class="heading">Meet our MVPs</h2>
-           <p>Coming soon. 😊</p>
+          <p>Coming soon. 😊</p>
         </section>
       </main>
 
@@ -201,10 +220,22 @@
           <h2 class="heading">Open Source</h2>
           <div class="opensource__body">
             <p>
-              This project is OpenSource and is hosted on <a class="paragraph-links" href="#">GitHub</a>. All meaningful contributions are welcome to help grow this project and you don't need to know how to code to contribute.</p
+              This project is OpenSource and is hosted on
+              <a
+                class="paragraph-links"
+                href="https://github.com/Timonwa/techroadmap"
+                >GitHub</a
+              >. All meaningful contributions are welcome to help grow this
+              project and you don't need to know how to code to contribute.</p
             >
             <p
-              >If you would like to contribute to this project, please visit our <a class="paragraph-links" href="#">contributors page</a> to find out how to contribute.</p
+              >If you would like to contribute to this project, please visit our
+              <a
+                class="paragraph-links"
+                href="https://github.com/Timonwa/techroadmap/blob/main/CONTRIBUTING.md"
+                >contributors page</a
+              >
+              to find out how to contribute.</p
             >
             <p style="display: none">
               A considerable amount of my time is spent doing unpaid community
@@ -250,8 +281,8 @@
           <!-- website quote -->
           <div class="sections quote">
             <p
-              >Roadmaps, articles, and useful resources to help you choose a career
-              path, start your journey, and grow in tech.
+              >Roadmaps, articles, and useful resources to help you choose a
+              career path, start your journey, and grow in tech.
             </p>
           </div>
 
