--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                 >Here you have access to collections of ebooks, courses, videos, articles, guides, tools, etc on the different careers in tech including the no-code jobs. So if you are just starting your career or have yet to choose a career path, then you are in the right place.</p
               >
               <p
-                >You can click on one of the career cards below if you have already chosen a career path or go to our <a class="paragraph-links" href="#">careers page</a> if you need help in deciding the one to choose.</p
+                >You can click on one of the career cards below if you have already chosen a career path or go to our <a class="paragraph-links" href="/html/careers.html">careers page</a> if you need help in deciding the one to choose.</p
               >
             </div>
           </div>
@@ -213,7 +213,7 @@
             <a href="#" class="careers__card-link disabled">
               <p class="coming-soon"><span>Coming Soon</span></p>
               <div class="careers__card">
-                <h3>Product Management</h3>
+                <h3>Technical Writing</h3>
                 <p
                   >Curated guide and resources to becoming a product manager.</p
                 >
@@ -223,16 +223,16 @@
         </section>
       </main>
 
-      <!--* opensource (about the project) -->
+      <!--* open source (about the project) -->
       <aside class="opensource">
         <div class="opensource-wrapper">
           <h2 class="heading">Open Source</h2>
           <div class="opensource__body">
             <p>
-              This project is OpenSource and is hosted on <a class="paragraph-links" href="#">GitHub</a>. All meaningful contributions are welcome to help grow this project and you don't need to know how to code to contribute.</p
+              This project is OpenSource and is hosted on <a class="paragraph-links" href="https://github.com/Timonwa/techroadmap">GitHub</a>. All meaningful contributions are welcome to help grow this project and you don't need to know how to code to contribute.</p
             >
             <p
-              >If you would like to contribute to this project, please visit our <a class="paragraph-links" href="#">contributors page</a> to find out how to contribute.</p
+              >If you would like to contribute to this project, please visit our <a class="paragraph-links" href="https://github.com/Timonwa/techroadmap/blob/main/CONTRIBUTING.md">contributors page</a> to find out how to contribute.</p
             >
             <p style="display: none">
               A considerable amount of my time is spent doing unpaid community
