--- a/html/careers/frontend.html
+++ b/html/careers/frontend.html
@@ -392,13 +392,13 @@
                 <li class="resource-link">
                   <a target="_blank"
                     href="https://www.freecodecamp.org/news/front-end-developer-what-is-front-end-development-explained-in-plain-english/"
-                    >What is front end development explained in plain english.</a
+                    >What is front end development explained in plain english ~ FreeCodeCamp</a
                   >
                 </li>
                 <li class="resource-link">
                   <a target="_blank"
                     href="https://skillcrush.com/blog/skills-to-become-a-front-end-developer/"
-                    >Skills to become a front-end developer.</a
+                    >Skills to become a front-end developer ~ Skill Crush</a
                   >
                 </li>
               </ul>
@@ -450,7 +450,7 @@
                 <li class="resource-link">
                   <a target="_blank"
                     href="https://vitto.cc/the-complete-front-end-developer-roadmap-2021/"
-                    >The complete front-end developer roadmap 2021.</a
+                    >The complete frontend developer roadmap 2021 ~ Vittorio Rivabella</a
                   >
                 </li>
               </ul>
@@ -461,18 +461,13 @@
               <h3 class="resource-card-title">Videos</h3>
               <ul class="resource-card-links">
                 <li class="resource-link">
-                  <a target="_blank" href="https://youtu.be/EqzUcMzfV1w"
-                    >Web development 2022, a practical guide.</a
-                  >
-                </li>
-                <li class="resource-link">
                   <a target="_blank" href="https://youtu.be/lnJG9grXqfs"
-                    >Frontend Developer Learning Roadmap 2021.</a
+                    >Frontend developer learning roadmap 2021 ~ Gift Egwuenu</a
                   >
                 </li>
                 <li class="resource-link">
-                  <a target="_blank" href="https://youtu.be/BEoFSRdkSZQ"
-                    >Fullstack developer Roadmap.</a
+                  <a target="_blank" href="https://youtu.be/EqzUcMzfV1w"
+                    >Web development in 2022, a practical guide ~ Travesty Media</a
                   >
                 </li>
               </ul>
@@ -484,7 +479,7 @@
               <ul class="resource-card-links">
                 <li class="resource-link">
                   <a target="_blank" href="https://developer.mozilla.org/en-US/docs/Learn"
-                    >Learn Web Development</a
+                    >Learn web development ~ MDN Web Docs</a
                   >
                   <span class="resource-link-badge">Website</span>
                 </li>
@@ -582,19 +577,20 @@
                     </li>
                     <li class="resource-link">
                       <a target="_blank" href="https://youtu.be/fWzp5lZ5CEA"
-                        >VsCode setup for Html, Css and Javascript.</a
+                        >VsCode setup for Html, Css and Javascript ~ Norbert BM Web Development</a
                       >
                       <span class="resource-link-badge">Video</span>
                     </li>
                     <li class="resource-link">
                       <a target="_blank" href="https://youtu.be/LdF2RcelRg0"
-                        >15 VsCode extensions for frontend developers.</a
+                        >15 VsCode extensions for frontend developers ~ Traversy Media
+</a
                       >
                       <span class="resource-link-badge">Video</span>
                     </li>
                     <li class="resource-link">
                       <a target="_blank" href="https://www.freecodecamp.org/news/create-your-own-custom-code-snippets/"
-                        >Create your own custom code snippets.</a
+                        >Create your own custom code snippets ~ Timonwa</a
                       >
                       <span class="resource-link-badge">Article</span>
                     </li>
@@ -611,7 +607,8 @@
                     </li>
                     <li class="resource-link">
                       <a target="_blank" href="https://youtu.be/-6ikAMmu3Nc"
-                        >The best Sublime settings and packages.</a
+                        >The best Sublime settings and packages ~ Tech With Tim
+</a
                       >
                       <span class="resource-link-badge">Video</span>
                     </li>
@@ -629,19 +626,19 @@
                     </li>
                     <li class="resource-link">
                       <a target="_blank" href="https://youtu.be/3UMIlcqThj8"
-                        >Atom editor HTML and CSS setup.</a
+                        >Atom editor HTML and CSS setup ~ Daniel Soriano</a
                       >
                       <span class="resource-link-badge">Video</span>
                     </li>
                     <li class="resource-link">
                       <a target="_blank" href="https://youtu.be/HPhn12OBUpQ"
-                        >Top 10 Atom extensions.</a
+                        >Top 10 Atom extensions ~ CodeWithWebDev</a
                       >
                       <span class="resource-link-badge">Video</span>
                     </li>
                     <li class="resource-link">
                       <a target="_blank" href="https://youtu.be/aiXNKHKWlmY"
-                        >10 Atom essential packages.</a
+                        >10 Atom essential packages ~ Traversy Media</a
                       >
                       <span class="resource-link-badge">Video</span>
                     </li>
@@ -664,20 +661,20 @@
                       >
                     </li>
                     <li class="resource-link">
-                      <a target="_blank" href="https://www.google.com/amp/s/www.freecodecamp.org/news/how-to-use-codepen/amp"
-                        >How to use Codepen.</a
+                      <a target="_blank" href="https://www.google.com/amp/s/www.freecodecamp.org/news/how-to-use-codepen"
+                        >How to Use CodePen - A beginner's guide ~ Jessica Wilkins</a
                       >
                       <span class="resource-link-badge">Article</span>
                     </li>
                     <li class="resource-link">
                       <a target="_blank" href="https://youtu.be/vb9uYBtqmeM"
-                        >How to use Codepen with Chis Coyier.</a
+                        >How to use Codepen with Chis Coyier. ~ FreeCodeCamp</a
                       >
                       <span class="resource-link-badge">Video</span>
                     </li>
                     <li class="resource-link">
                       <a target="_blank" href="https://youtu.be/v1io5m8MxfA"
-                        >A Beginner's Guide to Codepen in 2020 | The Basics.</a
+                        >A beginner's guide to Codepen in 2020 | The basics. ~ Manuel Zavala</a
                       >
                       <span class="resource-link-badge">Video</span>
                     </li>
@@ -699,7 +696,7 @@
                     </li>
                     <li class="resource-link">
                       <a target="_blank" href="https://survivejs.com/blog/codesandbox-interview/"
-                        >CodeSandbox - Online React Playground - Interview with Ives van Hoorne
+                        >CodeSandbox - Online react playground - Interview with Ives van Hoorne. ~ SurviveJs
                       </a>
                       <span class="resource-link-badge">Article</span>
                     </li>
@@ -777,27 +774,28 @@
               <ul class="resource-card-links">
                 <li class="resource-link">
                   <a target="_blank" href="https://youtu.be/qz0aGYrrlhU"
-                    >Html Tutorial for beginners - Crash course.</a
+                    >Html tutorial for beginners - Crash course 2021. ~ Programming with Mosh
+</a
                   >
                 </li>
                 <li class="resource-link">
                   <a target="_blank" href="https://youtu.be/UB1O30fR-EE"
-                    >Html crash course for absolute beginners.</a
+                    >Html crash course for absolute beginners. 2017 ~ Traversy Media</a
                   >
                 </li>
                 <li class="resource-link">
                   <a target="_blank" href="https://youtu.be/yfoY53QXEnI"
-                    >Css crash course for absolute beginners.</a
+                    >Css crash course for absolute beginners 2017. ~ Traversy Media</a
                   >
                 </li>
                 <li class="resource-link">
                   <a target="_blank" href="https://youtu.be/vQWlgd7hV4A"
-                    >Learn Html and Css for beginners - Crash course.</a
+                    >Learn Html and Css for beginners - Crash course. ~ Dev Ed</a
                   >
                 </li>
                 <li class="resource-link">
                   <a target="_blank" href="https://youtu.be/mU6anWqZJcc"
-                    >Html and Css full course fron scratch - Full course.</a
+                    >Html and Css full course from scratch - Full course. ~ FreeCodeCamp</a
                   >
                 </li>
               </ul>
@@ -809,22 +807,12 @@
               <ul class="resource-card-links">
                 <li class="resource-link">
                   <a target="_blank" href="https://youtube.com/playlist?list=PL4cUxeGkcC9ivBf_eKCPIAYXWzLlPAm6G"
-                    >Html and Css Crash course Tutorial</a
-                  >
-                </li>
-                <li class="resource-link">
-                  <a target="_blank" href="https://youtube.com/playlist?list=PLWKjhJtqVAbnSe1qUNMG7AbPmjIG54u88"
-                    >Html and Css Tutorials.</a
-                  >
-                </li>
-                <li class="resource-link">
-                  <a target="_blank" href="https://youtube.com/playlist?list=PLillGF-RfqbZTASqIqdvm1R5mLrQq79CU"
-                    >Html and Css.</a
+                    >Html and Css Crash course tutorial. ~ The Net Ninja</a
                   >
                 </li>
                 <li class="resource-link">
                   <a target="_blank" href="https://youtube.com/playlist?list=PL7TLF4T4Tq2RCWa-ZRkEWXVtXteyZ2CjK"
-                    >Css3 Full Tutorial.</a
+                    >Css3 Full Tutorial. ~ Dev Dreamer</a
                   >
                 </li>
               </ul>
@@ -836,7 +824,7 @@
               <ul class="resource-card-links">
                 <li class="resource-link">
                   <a target="_blank" href="https://www.freecodecamp.org/learn/responsive-web-design/"
-                    >Responsive Website Design from Free Code Camp.</a
+                    >Responsive Website Design. ~ Free Code Camp.</a
                   >
                   <span class="resource-link-badge">Free</span>
                 </li>
@@ -849,12 +837,12 @@
               <ul class="resource-card-links">
                 <li class="resource-link">
                   <a target="_blank" href="https://blog.timonwa.com/using-css-variables-like-a-pro"
-                    >Using CSS Variables like a Pro.</a
+                    >Using CSS Variables like a Pro. ~ Timonwa</a
                   >
                 </li>
                 <li class="resource-link">
                   <a target="_blank" href="https://blog.timonwa.com/all-vs-root-vs-html-vs-body-selectors"
-                    >All vs root vs html vs body selectors.</a
+                    >All vs root vs html vs body selectors. ~ Timonwa</a
                   >
                 </li>
               </ul>
@@ -866,12 +854,12 @@
               <ul class="resource-card-links">
                 <li class="resource-link">
                   <a target="_blank" href="https://youtube.com/playlist?list=PLt5nFcZSSiWVptXtYJssP6K3HoSl0cp-O"
-                    >Html and Css Projects.</a
+                    >100 + Html and Css projects. ~ Mahdi</a
                   >
                 </li>
                 <li class="resource-link">
                   <a target="_blank" href="https://www.frontendmentor.io/challenges"
-                    >Frontend Challenges by Frontend Mentor</a
+                    >Frontend Challenges ~ Frontend Mentor</a
                   >
                 </li>
               </ul>
@@ -884,13 +872,13 @@
               <ul class="resource-card-links">
                 <li class="resource-link">
                   <a target="_blank" href="https://www.w3schools.com/"
-                    >W3Schools - Learn to code online with an online editor.</a
+                    >Learn to code online with an online editor. ~ W3Schools</a
                   >
                   <span class="resource-link-badge">Website</span>
                 </li>
                 <li class="resource-link">
                   <a target="_blank" href="https://youtube.com/c/OnlineTutorials4Designers"
-                    >Online Tutorials.</a
+                    >Creative Css and Javascript projects. ~ Online Tutorials.</a
                   >
                   <span class="resource-link-badge">Youtube Channel</span>
                 </li>
@@ -916,22 +904,22 @@
               <ul class="resource-card-links">
                 <li class="resource-link">
                   <a target="_blank" href="https://youtu.be/3YW65K6LcIA"
-                    >Css Flexbox crash course.</a
+                    >Css Flexbox crash course. ~ Traversy Media</a
                   >
                 </li>
                 <li class="resource-link">
                   <a target="_blank" href="https://youtu.be/tXIhdp5R7sc"
-                    >Css Flexbox crash course.</a
+                    >Css Flexbox crash course. ~ FreeCodeCamp</a
                   >
                 </li>
                 <li class="resource-link">
                   <a target="_blank" href="https://youtu.be/EFafSYg-PkI"
-                    >Css Grid crash course.</a
+                    >Css Grid crash course. ~ Dev Ed</a
                   >
                 </li>
                 <li class="resource-link">
                   <a target="_blank" href="https://youtu.be/t6CBKf8K_Ac"
-                    >Grid crash course.</a
+                    >Grid crash course. ~ FreeCodeCamp</a
                   >
                 </li>
                 <li class="resource-link">
@@ -953,17 +941,17 @@
               <ul class="resource-card-links">
                 <li class="resource-link">
                   <a target="_blank" href="https://youtube.com/playlist?list=PL4cUxeGkcC9iGYgmEd2dm3zAKzyCGDtM5"
-                    >Css Animations Tutorial.</a
+                    >Css animations tutorial. ~ The Net Ninja</a
                   >
                 </li>
                 <li class="resource-link">
                   <a target="_blank" href="https://youtube.com/playlist?list=PLqGj3iMvMa4LvJ8VctoXnPI0dtE40wfid"
-                    >Css Animations series.</a
+                    >Css animations series. ~ DevTips</a
                   >
                 </li>
                 <li class="resource-link">
                   <a target="_blank" href="https://youtube.com/playlist?list=PL7TLF4T4Tq2RCWa-ZRkEWXVtXteyZ2CjK"
-                    >Css3 Full Tutorial.</a
+                    >Css3 Full Tutorial. ~ Dev Dreamer</a
                   >
                 </li>
               </ul>
@@ -1000,13 +988,13 @@
               <h3 class="resource-card-title">Practice Projects</h3>
               <ul class="resource-card-links">
                 <li class="resource-link">
-                  <a target="_blank" href="#"
-                    >100+ Complete Responsive Website Designs </a
+                  <a target="_blank" href="https://www.youtube.com/playlist?list=PLSJxovi1IyDH-pPIe0OF0z_mW-WVdhmhx"
+                    >100 Complete Responsive Website Designs ~ Mr. Web Designer </a
                   >
                 </li>
                 <li class="resource-link">
                   <a target="_blank" href="https://youtu.be/vNc2s-ic1cc"
-                    >6 handy Css animation projects.</a
+                    >6 handy Css animation projects. ~ Envato Tuts+</a
                   >
                 </li>
               </ul>
